# Reflection

./: .gitignore  README.md
Reflection/: CMakeLists.txt  Reflection.sln
Reflection/Demo/: CMakeLists.txt  Demo.cpp  Demo.h  DemoClass.cpp  DemoClass.h
Reflection/Reflection/: FixedVector.h  GCManager.cpp  GCManager.h  GCObject.cpp  GCObject.h  GCUtility.h  GameObject.generate.h  GameObject.h  IPrintable.h  IndexPoolArray.h  Method.h  PrimitivePrintable.h  Primitives.cpp  Procedure.h  Property.h  Reflect.h  Reflection.vcxproj  Reflection.vcxproj.filters  ReflectionMacro.h  ReflectionMacros.h  RegisterPrimitives.cpp  TestClass.h  ThreadPool.h  TypeInfo.cpp  TypeInfo.h  main.cpp
Reflection/Reflection/x64/Release/: Reflection.exe.recipe  Reflection.ipdb
Reflection/Reflection/x64/Release/Reflection.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Reflection.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Reflection/ReflectionCodeGenerater/: ReflectionCodeGenerater.vcxproj  ReflectionCodeGenerater.vcxproj.filters  ReflectionGenerator.cpp  ReflectionGenerator.h  main.cpp
Reflection/ReflectionCodeGenerater/x64/Debug/: ReflectionCodeGenerater.exe.recipe  ReflectionCodeGenerater.ilk  vc143.idb
Reflection/ReflectionCodeGenerater/x64/Debug/Reflecti.5dc149ac.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ReflectionCodeGenerater.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  (+1 more)
Reflection/enc_temp_folder/79b11f466a75ba436903d5c286847c7/: GCManager.cpp
